# driver-behavior-clustering

./: .gitignore  Data Science Challenge - Categorising  Driver Behaviour Using Clustering.ipynb  README.md  config.yaml  day2_inject.py  day3_inject.py  day4_inject.py  driver_behavior.csv  patch_notebook.py  pyproject.toml  requirements.txt  tasks.md  verify_patch.py
app/: streamlit_app.py
notebooks/: 01_Clustering_Analysis.ipynb
src/: __init__.py  evaluate.py  models.py
